<resources>
    <string name="app_name">Lab_02</string>

    <string name="zero">0</string>
    <string name="zero3">000</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="delete">sto</string>
    <string name="exponent">^</string>
    <string name="parentheses_right">)</string>
    <string name="parentheses_left">(</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="One_over_X">1/X</string>
    <string name="Tothe">^</string>
    <string name="percent">%</string>
    <string name="plus_over_minus">+/-</string>

</resources>
