<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292E49"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvMath"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/circel"
            android:gravity="right|center_vertical"
            android:minHeight="48dp"
            android:text="@string/zero"
            android:textColor="#00EEEEEE"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/circel"
            android:gravity="right|center_vertical"
            android:minHeight="48dp"
            android:text="@string/zero"
            android:textColor="#EEEEEE"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOverX"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/parentheses_left"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnToThe"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/Tothe"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnParentheses"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/parentheses_right"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btnDelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#C84B31"
            android:text="CE"
            app:srcCompat="@drawable/delete"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#C84B31"
            android:text="@string/clear"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPercent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/percent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPlusOverMinus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/plus_over_minus"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDiv"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#346751"
            android:text="/"
            android:textSize="30sp"
            tools:text="@string/divide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/nine"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMul"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#346751"
            android:text="@string/multiply"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/six"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnSub"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#346751"
            android:text="@string/subtract"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/three"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#346751"
            android:text="@string/add"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn000"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/zero3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDot"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:text="@string/point"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnResult"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circel"
            android:backgroundTint="#346751"
            android:text="@string/equals"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>
</LinearLayout>